<resources>
    <string name="app_name">NDP Songs</string>
    <string name="show_list">SHOW LIST</string>
    <string name="insert">INSERT</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="stars">Stars</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="year">Year</string>
    <string name="enter_singers_name_here">Enter singers name here</string>
    <string name="singers">Singers</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="song_title">Song Title</string>
    <string name="song_id">Song ID</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string-array name="spinnerItems">
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
</resources>